added references to form elements for html elements.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-  <span>
+<span>
   <form id="pythonForm">
     <span>
-      <div>
-      <label for="font-color">Font Color</label>
+    <div>
+      <label for="color-font">Font Color</label>
       <select name="mainColor" id="main-color">
         <option value="" disabled="disabled" selected="selected">--Choose a color-</option>
         <option value="black">Black</option>
@@ -26,7 +26,7 @@
     </div>
     </span>
     <span>
-      <label for="color-change">Background Color:</label> 
+      <label for="color-background">Background Color:</label> 
       <input name="" type="text" id="colorChange"><br>
     </span>
     <span>
@@ -40,7 +40,7 @@
   <span id="font-change"></span>
   <span id="color-change"></span>
   <span id="fontSize-change"></span>
-  </span>
+</span>
   <h1>Python (programming language)</h1>
   <p>
     <sub>From Wikipedia, the free encyclopedia</sub>
@@ -70,7 +70,7 @@
     central role in deciding the direction of Python is reflected in the title given to him by the Python community, Benevolent
     Dictator For Life (BDFL).</p>
 
-  <p id="origin">About the origin of Python, Van Rossum wrote in 1996:</p>
+  <p>About the origin of Python, Van Rossum wrote in 1996:</p>
   <blockquote>“Over six years ago, in December 1989, I was looking for a "hobby" programming project that would keep me occupied during
     the week around Christmas. My office ... would be closed, but I had a home computer, and not much else on my hands. I
     decided to write an interpreter for the new scripting language I had been thinking about lately: a descendant of ABC
@@ -84,7 +84,7 @@
     release, was released on 3 December 2008 after a long period of testing. Many of its major features have been backported
     to the backwards-compatible Python 2.6.x and 2.7.x version series.</p>
 
-  <p id="eol">The End Of Life date (EOL, sunset date) for Python 2.7 was initially set at 2015, then postponed to 2020 out of concern
+  <p>The End Of Life date (EOL, sunset date) for Python 2.7 was initially set at 2015, then postponed to 2020 out of concern
     that a large body of existing code cannot easily be forward-ported to Python 3. In January 2017, Google announced work
     on a Python 2.7 to Go transcompiler, which The Register speculated was in response to Python 2.7's planned end-of-life
     but Google cited performance under concurrent workloads as their only motivation.</p>
